# FuncNodes

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .py  .pylintrc  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  context7.json  cz.toml  index.html  llms-full.txt  llms.txt  pyproject.toml  pytest.ini  setup.py  sitemap.xml  versions.json
.github/actions/cache_py/: action.yml
.github/actions/install_package/: action.yml
.github/workflows/: docs.yaml  py_test.yml  version_publish_main.yml
FuncNodes/: _typing.py  errors.py  io.py  iotypes.py  mixins.py  node.py  node_detector.py  nodespace.py  pyscript_nodes.py  utils.py
FuncNodes/nodes/: node_creator.py
FuncNodes/nodes/basic/: inputnodes.py
FuncNodes/nodes/frontend_nodes/: rendernode.py
FuncNodes/nodes/numpy_nodes/: nprandom.py  ranges.py  types.py  ufunc.py
FuncNodes/nodes/pandas_nodes/: __init__.py  generate.py  read.py  types.py
api/cli/: index.html  index.md
architecture/core-components/: index.html  index.md
architecture/event-system/: index.html  index.md
architecture/message-protocol/: index.html  index.md
architecture/overview/: index.html  index.md
architecture/worker-components/: index.html  index.md
components/config/: index.html
components/inputs-outputs/: index.html  index.md
components/lib/: index.html
components/node/: index.html  index.md
components/nodeinput/: index.html  index.md
components/nodeoutput/: index.html  index.md
components/nodespace/: index.html
components/serialization/: index.html  index.md
components/shelf/: index.html
components/worker/: index.html
components/worker_config/: index.html
components/workermanager/: index.html
dev/: 404.html  index.html  llms-full.txt  llms.txt  sitemap.xml
dev/api/cli/: index.html  index.md
dev/architecture/core-components/: index.html  index.md
dev/architecture/event-system/: index.html  index.md
dev/architecture/message-protocol/: index.html  index.md
dev/architecture/overview/: index.html  index.md
dev/architecture/worker-components/: index.html  index.md
dev/components/config/: index.html  index.md
dev/components/external-workers/: index.html
dev/examples/: index.html  index.md
dev/experimental/: index.html  index.md
dev/modules/: index.html
docs/: conf.py  index.rst  mkdocs.yml
docs/content/: index.md
docs/overrides/: example_theme.html
examples/: cat.fnw  funcnodes_numpy_example.py  index.html  index.md  simple_node.py  simple_nodedecorator.py  titanic.fnw  ws_worker.py  ws_worker_w_externalworker.py
examples/cat/: index.html
examples/csv/: index.html
examples/titanic/: index.html
experimental/: index.html  index.md
experimental/standalone/: index.html  index.md
extending/react-plugins/: index.html  index.md
extending/testing-modules/: index.html  index.md
extending/writing-modules/: index.html  index.md
faq/common-issues/: index.html
funcnodes/: __init__.py  __main__.py  _logging.py  _typing.py  cli.py  config.py  data.py  errors.py  eventmanager.py  exceptions.py  io.py  iotypes.py  mixins.py  node.py  node_creator.py  node_detector.py  nodemaker.py  nodespace.py  patches.py  pyscript_nodes.py  triggerstack.py  utils.py
funcnodes/basic_nodes/: __init__.py  files.py  frontend.py  lists.py  logic.py  math.py
funcnodes/lib/: __init__.py  lib.py  libfinder.py  libparser.py
funcnodes/nodes/: node_creator.py  progflow.py  special_bases.py
funcnodes/runner/: __init__.py  _simple_server.py
funcnodes/utils/: __init__.py  asyncutils.py  cmd.py  data.py  envs.py  files.py  messages.py  modules.py  nodeutils.py  plugins.py  saving.py  serialization.py  special_types.py
funcnodes/worker/: __init__.py  external_worker.py  loop.py  remote_worker.py  utils.py  websocket.py  worker.py  worker_manager.py
getting-started/basic_usage/: index.html  index.md
getting-started/installation/: index.html  index.md
getting-started/introduction/: index.html  index.md
latest/: 404.html  index.html
latest/examples/: index.html
latest/experimental/: index.html
latest/modules/: index.html
modules/: index.html  index.md
scripts/: fnw_open.cmd  register_fnw_windows.ps1
search/: search_index.json
src/funcnodes/: __init__.py  __main__.py
static/css/: style.css
static/funcnodespyodide/: index.js  index.js.map  pyodideWorkerLayout.js  pyodideWorkerLayout.js.map  pyodideWorkerLogic.js  style.css
static/js/: basic_funcnodes_pyodide.js
static/nodebuilder/: index.js.map  pyodideDedicatedWorker.js  pyodideDedicatedWorker.js.map  pyodideSharedWorker.js  pyodideSharedWorker.js.map
tests/: test_basic_nodes.py  test_cli_interactive.py  test_data.py  test_edge.py  test_eventmanager.py  test_examples.py  test_find_nodes.py  test_graph.py  test_lib.py  test_library.py  test_main_cli.py  test_main_cli_full_coverage.py  test_node.py  test_node_create.py  test_node_examples.py  test_nodeclass.py  test_nodeclassmixin.py  test_nodeio.py  test_nodemaker.py  test_nodespace.py  test_nodeutils.py  test_numpy_nodes.py  test_open_browser.py  test_pandas_nodes.py  test_progflow.py  test_simple_server.py  test_standalone.py  test_standalone_cli.py  test_standalone_register.py  test_text_nodes.py  test_triggerstack.py  test_types.py  test_utils.py  test_windows_scripts.py  test_worker_command_cli.py
tests/test_nodes/: test_math.py
tests/test_utils/: test_asyncutils.py  test_cmd.py  test_datautils.py
tests/test_worker/: test_external_worker.py  test_ws_worker.py
tests/test_worker_manager/: test_public_worker_hosts.py  test_terminate_with_parent.py  test_worker_manager.py
v1.5.1/: 404.html  index.html  llms-full.txt  llms.txt  sitemap.xml
v1.5.1/examples/: cat.fnw  csv.fnw  index.html  index.md
v1.5.1/experimental/: index.html  index.md
v1.5.1/modules/: index.html
(+295 files in other folders)
