[project]
name = "funcnodes"
version = "0.5.33"
description = "funcnodes"

authors = [{name = "Julian Kimmig", email = "julian.kimmig@linkdlab.de"}]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    ]
requires-python = ">=3.11"
dependencies = [
    "virtualenv",
    "funcnodes-basic>=0.2.1",
    "funcnodes-core>=0.3.21",
    "funcnodes-react-flow>=0.3.4",
    "subprocess-monitor>=0.2.0",
    "funcnodes_worker[all]",
    "venvmngr>=0.1.14",
    "uv>=0.5.21",
    "pip>=24.2"
]

[project.license]
text = "AGPL-3.0"

[project.urls]
homepage  = "https://github.com/Linkdlab/funcnodes"
source  = "https://github.com/Linkdlab/funcnodes"
tracker  = "https://github.com/Linkdlab/funcnodes/issues"
download = "https://pypi.org/project/funcnodes/#files"


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "snakeviz>=2.2.2",
    "vulture>=2.14",
    "funcnodes[profiling]",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.2",
]


[project.optional-dependencies]
    profiling = ["yappi>=1.6.10"]



[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
funcnodes = 'funcnodes.__main__:main'


[tool.vulture]
min_confidence = 80
paths = ["src"]
