[project]
name = "funcnodes"
version = "1.4.0"
description = "funcnodes"

authors = [{name = "Julian Kimmig", email = "julian.kimmig@linkdlab.de"}]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    ]
requires-python = ">=3.11"
dependencies = [
    "virtualenv; sys_platform != 'emscripten'",
    "funcnodes-basic>=0.2.1",
    "funcnodes-core>=1.0.2",
    "funcnodes-react-flow>=1.1.0; sys_platform != 'emscripten'",
    "subprocess-monitor>=0.3.0; sys_platform != 'emscripten'",
    "funcnodes-module; sys_platform != 'emscripten'",
    "funcnodes_worker[all]>=1.5.1; sys_platform != 'emscripten'",
    "funcnodes_worker>=1.5.1; sys_platform == 'emscripten'",
    "venvmngr>=0.2.0; sys_platform != 'emscripten'",
    "uv>=0.5.21; sys_platform != 'emscripten'"
]

[project.license]
text = "AGPL-3.0"

[project.urls]
homepage  = "https://github.com/Linkdlab/funcnodes"
source  = "https://github.com/Linkdlab/funcnodes"
tracker  = "https://github.com/Linkdlab/funcnodes/issues"
download = "https://pypi.org/project/funcnodes/#files"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "snakeviz>=2.2.2",
    "vulture>=2.14",
    "funcnodes[profiling]",
    "pytest-funcnodes>=0.1.0",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-llmstxt>=0.5.0",
    "mkdocs-material>=9.6.9",
]


[project.optional-dependencies]
    profiling = ["yappi>=1.6.10"]
    profile = ["funcnodes[profiling]"]



[tool.hatch.build]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "__pycache__",
    "*.pyc",
    "*.pyo",
    ".venv*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/funcnodes"]

[project.scripts]
funcnodes = 'funcnodes.__main__:main'


[tool.vulture]
min_confidence = 80
paths = ["src"]
